--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
         {"name": "Andrew Gruner", "email": "andrew.gruner@gmail.com"}
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "doctrine/common"          : "2.1.*",
+        "symfony/event-dispatcher" : "2.0.*",
+        "symfony/finder"           : "2.0.*",
+        "symfony/yaml"             : "2.0.*"
     },
     "autoload": {
         "psr-0": { "NodePub\\BlogEngine": "lib/" }
