--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "doctrine/common"          : "2.1.*",
+        "doctrine/common"          : ">= 2.3.0, < 2.4.0-beta",
         "symfony/event-dispatcher" : "2.1.*",
         "symfony/finder"           : "2.1.*",
         "symfony/yaml"             : "2.1.*"
