--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
         "php": ">=5.3.2",
         "dflydev/markdown"         : "1.0.*",
         "doctrine/common"          : ">= 2.3.0, < 2.4.0-beta",
-        "symfony/event-dispatcher" : "2.1.*",
-        "symfony/finder"           : "2.1.*",
-        "symfony/yaml"             : "2.1.*"
+        "symfony/event-dispatcher" : "~2.3",
+        "symfony/finder"           : "~2.3",
+        "symfony/yaml"             : "~2.3"
     },
     "autoload": {
         "psr-0": { "NodePub\\BlogEngine": "src/" }
