--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": ">=5.3.3",
         "dflydev/markdown"         : "1.0.*",
         "doctrine/common"          : ">= 2.3.0, < 2.4.0-beta",
+        "symfony/config"           : "~2.3",
         "symfony/event-dispatcher" : "~2.3",
         "symfony/finder"           : "~2.3",
         "symfony/yaml"             : "~2.3"
