Using NodePub\Common\Trait\SoureceDirectoryAware interface and trait

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": ">=5.3.3",
         "dflydev/markdown"         : "1.0.*",
         "doctrine/common"          : ">= 2.3.0, < 2.4.0-beta",
+        "nodepub/common"           : "dev",
         "symfony/config"           : "~2.3",
         "symfony/event-dispatcher" : "~2.3",
         "symfony/finder"           : "~2.3",
